tests/rustdoc-ui/error-in-impl-trait/impl-keyword-closure.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `error`
  --> $DIR/impl-keyword-closure.rs:4:9
   |
LL |     (|| error::_in::impl_trait::alias::nested::closure())()
   |         ^^^^^ use of undeclared crate or module `error`

error: Compilation failed, aborting rustdoc

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
